docs/core/v0.3/_sources/reference/tmlt/core/measurements/converters/index.rst.txt



*****************
converters
*****************

.. py:module:: tmlt.core.measurements.converters

.. autoapi-nested-parse::

   Wrappers for changing a measurements's output measure.











Classes
=======

.. list-table::

   * - :class:`.PureDPToRhoZCDP`
     - Measurement for converting pure DP to zCDP.
   * - :class:`.PureDPToApproxDP`
     - Measurement for converting pure DP to approximate DP.
   * - :class:`.RhoZCDPToApproxDP`
     - Measurement for converting zCDP to approximate DP.

   
.. py:class:: PureDPToRhoZCDP(pure_dp_measurement)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Measurement for converting pure DP to zCDP.






   .. automethod:: __init__
   .. py:method:: pure_dp_measurement(self)
      :property:

      Return the wrapped pure DP measurement.


   .. py:method:: privacy_function(self, d_in)

      Returns the smallest d_out satisfied by the measurement.

      The returned d_out (:math:`\rho`) is :math:`\rho=\frac{\epsilon^2}{2}`

      where :math:`\epsilon` is the d_out returned by :attr:`~.pure_dp_measurement`'s
      :meth:`~.Measurement.privacy_function` on d_in.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If self.pure_dp_measurement.privacy_function(d_in)
          raises :class:`NotImplementedError`.


   .. py:method:: privacy_relation(self, d_in, d_out)

      Return True if close inputs produce close outputs.

      Let :math:`\epsilon = \sqrt{2 \cdot \rho}`

      Returns self.pure_dp_measurement.privacy_relation(d_in, :math:`\epsilon`)

      where :math:`\rho` is the input argument "d_out".

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_measure.


   .. py:method:: __call__(self, data)

      Apply measurement.


   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure(self)
      :property:

      Distance measure on output.


   .. py:method:: is_interactive(self)
      :property:

      Returns true iff the measurement is interactive.



   
.. py:class:: PureDPToApproxDP(pure_dp_measurement)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Measurement for converting pure DP to approximate DP.






   .. automethod:: __init__
   .. py:method:: pure_dp_measurement(self)
      :property:

      Return the wrapped pure DP measurement.


   .. py:method:: privacy_function(self, d_in)

      Returns the smallest d_out satisfied by the measurement.

      Returns (self.pure_dp_measurement.privacy_function(d_in), 0).

      Every (:math:`\epsilon`)-DP measurement is also (:math:`\epsilon`, 0)-DP.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If :attr:`~.pure_dp_measurement`'s
          :meth:`~.Measurement.privacy_function` raises
          :class:`NotImplementedError`.


   .. py:method:: privacy_relation(self, d_in, d_out)

      Returns the smallest d_out satisfied by the measurement.

      Returns self.pure_dp_measurement.privacy_relation(d_in, d_out[0])

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_measure.


   .. py:method:: __call__(self, data)

      Apply measurement.


   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure(self)
      :property:

      Distance measure on output.


   .. py:method:: is_interactive(self)
      :property:

      Returns true iff the measurement is interactive.



   
.. py:class:: RhoZCDPToApproxDP(zcdp_measurement)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Measurement for converting zCDP to approximate DP.






   .. automethod:: __init__
   .. py:method:: zcdp_measurement(self)
      :property:

      Return the wrapped zCDP measurement.


   .. py:method:: privacy_relation(self, d_in, d_out)

      Return True if close inputs produce close outputs.

      Special cases:

      * Every measurement is (:math:`\infty, \delta`)-DP
        for any :math:`\delta \ge 0`
      * Every measurement is (:math:`epsilon, 1`)-DP
        for any :math:`\epsilon \ge 0`
      * :class:`~.RhoZCDP` with :math:`\rho \gt 0` cannot be converted to
        (:math:`\epsilon, 0`)-DP for any finite :math:`\epsilon`

      General case:

      Let :math:`\rho` be the unique solution to
      :math:`\rho - 2 * \sqrt{\rho * log(\frac{1}{\delta})} - \epsilon = 0`

      where:

      * :math:`\delta` is the first element of the input argument "d_out"
      * :math:`\epsilon` is the second element of the input argument "d_out"

      Returns self.zcdp_measurement.privacy_relation(d_in, :math:`\rho`)

      See Proposition 1.3 in :cite:`BunS16` for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_measure.


   .. py:method:: __call__(self, data)

      Apply measurement.


   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure(self)
      :property:

      Distance measure on output.


   .. py:method:: is_interactive(self)
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_function(self, d_in)

      Returns the smallest d_out satisfied by the measurement.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.






